--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -112,6 +112,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 136.244.111.163;
+allow 138.124.31.147;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -260,15 +261,16 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.132.53.47;
+allow 185.132.53.52;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
+allow 185.168.22.85;
 allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
@@ -486,6 +488,7 @@ allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.231.102.51;
 allow 185.233.100.23;
+allow 185.235.146.29;
 allow 185.241.208.115;
 allow 185.241.208.202;
 allow 185.241.208.204;
@@ -600,7 +603,6 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.187.90.106;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -806,6 +808,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.126.86.139;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -843,6 +846,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1015,6 +1019,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:4f8:1c0c:645f::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1028,6 +1033,7 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4840:1:3::30;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1326,6 +1332,9 @@ allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:bbc7:0:1::254;
+allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1590,6 +1599,7 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
+allow 78.47.113.222;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1611,6 +1621,7 @@ allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.38.130.105;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
@@ -1684,6 +1695,5 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
-allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
