--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -246,6 +246,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:4f8:1c0c:645f::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -259,6 +260,7 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4840:1:3::30;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -557,6 +559,9 @@ allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:bbc7:0:1::254;
+allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
