--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -112,6 +112,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 136.244.111.163;
+set_real_ip_from 138.124.31.147;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
@@ -260,15 +261,16 @@ set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.132.53.12;
 set_real_ip_from 185.132.53.47;
+set_real_ip_from 185.132.53.52;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
+set_real_ip_from 185.168.22.85;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
@@ -486,6 +488,7 @@ set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
+set_real_ip_from 185.235.146.29;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
@@ -600,7 +603,6 @@ set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
-set_real_ip_from 193.187.90.106;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -806,6 +808,7 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 209.126.86.139;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
@@ -843,6 +846,7 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
+set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -1015,6 +1019,7 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
+set_real_ip_from 2a01:4f8:1c0c:645f::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1028,6 +1033,7 @@ set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:4840:1:3::30;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1326,6 +1332,9 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:bbc7:0:1::254;
+set_real_ip_from 2a0d:bbc7:0:1::320;
+set_real_ip_from 2a0d:bbc7:0:1::394;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1590,6 +1599,7 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 78.47.113.222;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
@@ -1611,6 +1621,7 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
+set_real_ip_from 84.38.130.105;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
@@ -1684,6 +1695,5 @@ set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
-set_real_ip_from 96.126.98.146;
 set_real_ip_from 96.66.15.152;
 set_real_ip_from 98.128.173.33;
