--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -262,7 +262,6 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.132.53.47;
-allow 185.132.53.52;
 allow 185.132.53.53;
 allow 185.142.239.49;
 allow 185.146.232.234;
@@ -270,9 +269,9 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
-allow 185.168.22.85;
 allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
@@ -639,6 +638,7 @@ allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.26.192.161;
 allow 194.26.192.72;
+allow 194.26.192.77;
 allow 194.26.192.97;
 allow 194.87.115.187;
 allow 195.160.220.104;
@@ -810,7 +810,6 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
-allow 209.126.86.139;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -1005,6 +1004,7 @@ allow 2620:18c:0:192::173;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1033,7 +1033,6 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4840:1:3::30;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1095,6 +1094,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1383,6 +1383,7 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
+allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
@@ -1541,6 +1542,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1613,11 +1615,11 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.165.51;
-allow 84.38.130.105;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
@@ -1629,6 +1631,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.80.20.86;
+allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.147.108.90;
