--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -269,6 +269,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -636,7 +637,6 @@ allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.26.192.161;
 allow 194.26.192.72;
-allow 194.26.192.77;
 allow 194.26.192.97;
 allow 194.87.115.187;
 allow 195.160.220.104;
@@ -779,6 +779,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
@@ -844,7 +845,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.14;
+allow 23.154.177.13;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1381,7 +1382,6 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
-allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
@@ -1541,14 +1541,16 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.100.26;
+allow 5.255.101.93;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.115.121;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.118.183;
 allow 5.255.118.218;
 allow 5.255.118.244;
+allow 5.255.120.100;
 allow 5.255.120.205;
 allow 5.255.121.71;
 allow 5.255.123.158;
@@ -1556,7 +1558,6 @@ allow 5.255.123.164;
 allow 5.255.124.134;
 allow 5.255.125.196;
 allow 5.255.125.41;
-allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
@@ -1580,6 +1581,7 @@ allow 5.79.66.19;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.190.76.2;
+allow 64.190.76.3;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
