--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -100,6 +100,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:67c:e28:1::2;
+deny 2001:67c:e28:1::3;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
@@ -610,7 +611,6 @@ deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
 deny 2a12:a800:1:1:194:26:192:161;
-deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
 deny 2a12:a800:1:1:2:58:56:43;
