--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -100,6 +100,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::2;
+set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
@@ -610,7 +611,6 @@ set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
-set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:35;
 set_real_ip_from 2a12:a800:1:1:2:58:56:43;
