--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -269,7 +269,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -637,6 +636,7 @@ allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.26.192.161;
 allow 194.26.192.72;
+allow 194.26.192.77;
 allow 194.26.192.97;
 allow 194.87.115.187;
 allow 195.160.220.104;
@@ -828,6 +828,7 @@ allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
+allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.64.151.73;
 allow 217.79.189.239;
@@ -846,6 +847,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -870,7 +872,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -1356,6 +1357,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1382,6 +1384,7 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
+allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
@@ -1443,6 +1446,7 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 38.134.148.79;
 allow 38.97.116.244;
 allow 45.11.229.132;
 allow 45.11.59.28;
@@ -1558,6 +1562,7 @@ allow 5.255.123.164;
 allow 5.255.124.134;
 allow 5.255.125.196;
 allow 5.255.125.41;
+allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
@@ -1680,6 +1685,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.116.81;
 allow 94.16.121.91;
+allow 94.177.106.236;
 allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.230.208.147;
