--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,6 +105,7 @@ allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
+allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -175,7 +176,6 @@ allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.186.73;
 allow 172.104.243.155;
-allow 172.104.248.232;
 allow 172.105.161.162;
 allow 172.233.82.41;
 allow 172.234.228.174;
@@ -266,7 +266,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -623,6 +622,7 @@ allow 193.218.118.91;
 allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.28.228.178;
 allow 193.32.162.96;
 allow 193.36.132.21;
 allow 193.70.80.213;
@@ -776,6 +776,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
+allow 2001:67c:e3c:300::16;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
@@ -810,7 +811,6 @@ allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -1023,13 +1023,13 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1612,6 +1612,7 @@ allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
