--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,6 +9,7 @@ allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
+allow 104.167.19.185;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
@@ -266,7 +267,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -1131,6 +1131,7 @@ allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
+allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
@@ -1496,6 +1497,7 @@ allow 45.61.186.203;
 allow 45.61.187.200;
 allow 45.66.35.10;
 allow 45.66.35.20;
+allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
 allow 45.78.44.215;
@@ -1541,6 +1543,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1631,6 +1634,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.147.108.228;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
