--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -271,6 +271,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
@@ -547,6 +548,7 @@ set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
+set_real_ip_from 192.210.160.55;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
 set_real_ip_from 192.42.116.15;
@@ -852,6 +854,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
